<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/categorias"
        android:layout_width="0dp"
        android:layout_height="102dp"
        android:background="@drawable/shadowcateg"
        android:elevation="3dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reproductor"
        tools:targetApi="lollipop">

        <HorizontalScrollView
            android:id="@+id/categscroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="1dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="ScrollViewSize">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageButton8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="usos"
                        android:onClick="touchlist"
                        app:srcCompat="@drawable/uso"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/toque"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:id="@+id/lineatouch"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:orientation="vertical"
                        android:visibility="visible"></LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/listacategorias"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageButton6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="nuevo"
                        android:onClick="crearcategoria"
                        app:srcCompat="@drawable/icon_add" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nuevo"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/green"
                        android:orientation="horizontal"
                        android:visibility="invisible"></LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pictogramas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/body"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorias"
        app:layout_constraintVertical_bias="0.0">

        <GridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="72dp"
            android:gravity="center"
            android:horizontalSpacing="5dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/paso1"
        android:layout_width="309dp"
        android:layout_height="83dp"
        android:layout_marginBottom="176dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorias"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/info"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:onClick="pasos"
                android:text="Listo"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="148dp"
        android:layout_height="108dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/titleapp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="42dp"
        android:layout_toEndOf="@+id/imageButton2"
        android:layout_toRightOf="@+id/imageButton2"
        android:background="@drawable/border_shadow"
        android:elevation="6dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DisableBaselineAlignment,NotSibling"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="Facebook" />

            <Button
                android:id="@+id/creditos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="onClick"
                android:text="Créditos" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionbar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/fassynewlight"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/fsc_btn_question"
                android:onClick="question" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/button4"
                android:layout_toStartOf="@+id/button4"
                android:background="@drawable/fsc_btn_trash"
                android:onClick="borrar" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:contentDescription="listo"
                android:onClick="onClick"
                android:visibility="invisible"
                app:srcCompat="@android:drawable/ic_menu_more"
                tools:layout_editor_absoluteX="319dp"
                tools:layout_editor_absoluteY="-29dp" />

            <TextView
                android:id="@+id/titleapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="13dp"
                android:text="@string/Tilte"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reproductor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shadowrep"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:id="@+id/pause"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_alignBottom="@+id/play"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/playrecordof"
                android:onClick="pause" />

            <Button
                android:id="@+id/play"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/playrecord"
                android:onClick="play"
                android:visibility="visible" />

            <HorizontalScrollView
                android:id="@+id/scrollplay"
                android:layout_width="200dp"
                android:layout_height="90dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/play"
                android:layout_toStartOf="@+id/play"
                android:layout_weight="0.94"
                android:fillViewport="true"
                tools:ignore="ObsoleteLayoutParam">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/question"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageButton
                            android:id="@+id/imageButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="preguntar"
                            app:srcCompat="@drawable/question" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Pregunta"
                            android:textAlignment="center"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/reproducion"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"></LinearLayout>

                </LinearLayout>
            </HorizontalScrollView>
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>